# hwtools

./: .gitignore  README.md  pyproject.toml
data/: extract.txt  gide_data
demo_data/: gide_data
docs/: .buildinfo  py-modindex.html  search.html  searchindex.js
docs/_modules/hwtools/: data_manager.html  parser.html  training_data_script.html  ui_manager.html
docs/_sources/: index.rst.txt
hwtools/: __init__.py  alphabet_parser.py  brouillon.py  config_template.py  config_tools.py  data_manager.py  essai.ipynb  ideas.md  log_config.py  parser.py  training_data_script.py  ui_manager.py  user_config.py  vectorizer.py
sphinx/: Makefile
sphinx/source/: conf.py
