[tool.poetry]
name = "handwriting-recognition"
version = "0.0.1"
description = "A library to handle scanned text and extract its characters in view of transcripting the text, after some human assisted labeling for training."
authors = ["Gaël Cousin <gcousin333@gmail.com>"]
license = "MongoDB's Server Side Public License Version 1"
readme = "README.md"
packages = [{include = "handwriting_recognition"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
numba = "^0.56.4"
matplotlib = "^3.5.1"
scikit-image = "^0.19.3"
np-gui = "^0.0.4"


[tool.poetry.group.dev.dependencies]
snakeviz = ">=2.1.1"
sphinx = ">=4.3.2"
pytest = ">=7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
